--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
     <header>
         <nav>
             <a href="#" id="icono" class="icono">Menu</a>
-            <div class="enlaces-uno">
+            <!--Opciones Menu-->
+            <div class="enlaces uno" id="enlaces">
                 <a href="#">Inicio</a>
                 <a href="#">Acerca de</a>
                 <a href="#">Contacto</a>
-
             </div>
+
         </nav>
         <div class="contenedor">
             <div class="textos">
@@ -44,6 +45,7 @@
             <a href="https://api.whatsapp.com/send?phone=543517704193&text=Hola%20Mart%C3%ADn%20!%20Me%20interesa%20saber%20m%C3%A1s%20de%20ti" target="_blank"><i class="fab fa-whatsapp"></i></a>
         </div>
     </footer>
+    <script src="/js/script.js"></script>
 </body>
 
 </html>
