--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Landing Page</title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="/style/estilos.css">
     <link rel="stylesheet" href="/style/all.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,700&display=swap" rel="stylesheet">
@@ -28,7 +28,7 @@
                 <h1>Martin Pino</h1>
                 <h2>Freelance Developer</h2>
                 <div class="boton">
-                    <a href="#">Contáctame</a>
+                    <a href="#">Contact Me</a>
                 </div>
             </div>
             <img src="img/vec-bet-min.png" alt="">
@@ -38,7 +38,59 @@
     <div class="wave">
         <div style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #000000;"></path></svg></div>
     </div>
-    <footer>
+
+    <!--MY SKILLS SECTION-->
+    <div class="contenedor-main">
+        <main class="habilidades">
+            <h1>My Skills</h1>
+            <div class="contenedor-hablidades">
+                <div class="skill">
+                    <h2>HTML</h2>
+                    <div class="icon-habilidades">
+                        <i class="fab fa-html5"></i>
+                    </div>
+                    <p>Lorem ipsum</p>
+                </div>
+                <div class="skill">
+                    <h2>CSS3</h2>
+                    <div class="icon-habilidades">
+                        <i class="fab fa-css3-alt"></i>
+                    </div>
+                    <p>Lorem ipsum</p>
+                </div>
+                <div class="skill">
+                    <h2>JavaScript</h2>
+                    <div class="icon-habilidades">
+                        <i class="fab fa-js-square"></i>
+                    </div>
+                    <p>Lorem ipsum</p>
+                </div>
+                <div class="skill">
+                    <h2>C#</h2>
+                    <div class="icon-habilidades">
+                        <i class="fas fa-code"></i>
+                    </div>
+                    <p>Lorem ipsum</p>
+                </div>
+                <div class="skill">
+                    <h2>Git</h2>
+                    <div class="icon-habilidades">
+                        <i class="fab fa-git-alt"></i>
+                    </div>
+                    <p>Lorem ipsum</p>
+                </div>
+                <div class="skill">
+                    <h2>SQL Server</h2>
+                    <div class="icon-habilidades">
+                        <i class="fas fa-database"></i>
+                    </div>
+                    <p>Lorem ipsum</p>
+                </div>
+            </div>
+        </main>
+    </div>
+    <footer class="footer">
+        <h3>Follow me</h3>
         <div class="iconos">
             <a href="https://www.linkedin.com/in/martinpino91/" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/pinomartin"><i class="fab fa-github" target="_blank"></i></a>
