--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
         <h3>Follow me</h3>
         <div class="iconos">
             <a href="https://www.linkedin.com/in/martinpino91/" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/pinomartin"><i class="fab fa-github" target="_blank"></i></a>
+            <a href="https://github.com/pinomartin" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://drive.google.com/open?id=1QwJdUblZdtZjmvyTN-MsAmazQTlS5cug" target="_blank"><i class="far fa-file-alt"></i></a>
             <a href="https://api.whatsapp.com/send?phone=543517704193&text=Hola%20Mart%C3%ADn%20!%20Me%20interesa%20saber%20m%C3%A1s%20de%20ti" target="_blank"><i class="fab fa-whatsapp"></i></a>
         </div>
     </footer>
