--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h1>My Skills</h1>
             <div class="contenedor-hablidades">
                 <div class="skill">
-                    <h2>HTML</h2>
+                    <h2>HTML5</h2>
                     <div class="icon-habilidades">
                         <i class="fab fa-html5"></i>
                     </div>
