--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="/style/estilos.css">
     <link rel="stylesheet" href="/style/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,700&display=swap" rel="stylesheet">
 </head>
 
@@ -44,42 +45,42 @@
         <main class="habilidades">
             <h1>My Skills</h1>
             <div class="contenedor-hablidades">
-                <div class="skill">
+                <div class="skill s-uno">
                     <h2>HTML5</h2>
                     <div class="icon-habilidades">
                         <i class="fab fa-html5"></i>
                     </div>
                     <p>Lorem ipsum</p>
                 </div>
-                <div class="skill">
+                <div class="skill s-uno">
                     <h2>CSS3</h2>
                     <div class="icon-habilidades">
                         <i class="fab fa-css3-alt"></i>
                     </div>
                     <p>Lorem ipsum</p>
                 </div>
-                <div class="skill">
+                <div class="skill s-uno">
                     <h2>JavaScript</h2>
                     <div class="icon-habilidades">
                         <i class="fab fa-js-square"></i>
                     </div>
                     <p>Lorem ipsum</p>
                 </div>
-                <div class="skill">
+                <div class="skill s-dos">
                     <h2>C#</h2>
                     <div class="icon-habilidades">
                         <i class="fas fa-code"></i>
                     </div>
                     <p>Lorem ipsum</p>
                 </div>
-                <div class="skill">
+                <div class="skill s-dos">
                     <h2>Git</h2>
                     <div class="icon-habilidades">
                         <i class="fab fa-git-alt"></i>
                     </div>
                     <p>Lorem ipsum</p>
                 </div>
-                <div class="skill">
+                <div class="skill s-dos">
                     <h2>SQL Server</h2>
                     <div class="icon-habilidades">
                         <i class="fas fa-database"></i>
