--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
             </div>
         </main>
     </div>
+    <div class="hero-inter">
+        <div class="wave">
+            <div style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M-26.80,1.48 C244.75,132.72 180.86,-41.94 511.65,51.80 L500.00,0.00 L0.00,0.00 Z" style="stroke: none; fill: #000000;"></path></svg></div>
+        </div>
+    </div>
     <footer class="footer">
         <h3>Follow me</h3>
         <div class="iconos">
