--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h1>Martin Pino</h1>
                 <h2>Freelance Developer</h2>
                 <div class="boton">
-                    <a href="#">Contact Me</a>
+                    <a href="#iconos-contacto">Contact Me</a>
                 </div>
             </div>
             <img src="img/vec-bet-min.png" alt="">
@@ -95,9 +95,44 @@
             <div style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M-26.80,1.48 C244.75,132.72 180.86,-41.94 511.65,51.80 L500.00,0.00 L0.00,0.00 Z" style="stroke: none; fill: #000000;"></path></svg></div>
         </div>
     </div>
+    <div class="contenedor-section">
+        <article class="section-experience">
+            <h1>My Experience</h1>
+            <div class="contenedor-experience">
+                <div class="experience">
+                    <h2>Administrativo Contable Senior</h2>
+                    <h3>Estudio Moreno y Asociados</h3>
+                    <p>10-2017 - Actualidad</p>
+                    <div class="lista-tareas">
+                        <li></li>
+                    </div>
+
+                </div>
+                <div class="experience">
+                    <h2>Administrativo Contable Senior</h2>
+                    <h3>Estudio Moreno y Asociados</h3>
+                    <p>10-2017 - Actualidad</p>
+                    <div class="lista-tareas">
+                        <li></li>
+                    </div>
+
+                </div>
+                <div class="experience">
+                    <h2>Administrativo Contable Senior</h2>
+                    <h3>Estudio Moreno y Asociados</h3>
+                    <p>10-2017 - Actualidad</p>
+                    <div class="lista-tareas">
+                        <li></li>
+                    </div>
+
+                </div>
+            </div>
+        </article>
+    </div>
+    <!--FOOTER SECTION-->
     <footer class="footer">
         <h3>Follow me</h3>
-        <div class="iconos">
+        <div class="iconos" id="iconos-contacto">
             <a href="https://www.linkedin.com/in/martinpino91/" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/pinomartin" target="_blank"><i class="fab fa-github"></i></a>
             <a href="https://drive.google.com/open?id=1QwJdUblZdtZjmvyTN-MsAmazQTlS5cug" target="_blank"><i class="far fa-file-alt"></i></a>
