--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/style/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -113,6 +114,8 @@
                     <h3>Estudio Moreno y Asociados</h3>
                     <p>10-2017 - Actualidad</p>
                     <div class="lista-tareas">
+                        <li></li>
+                        <li></li>
                         <li></li>
                     </div>
 
