--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/style/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -49,42 +49,42 @@
                 <div class="skill s-uno">
                     <h2>HTML5</h2>
                     <div class="icon-habilidades">
-                        <i class="fab fa-html5"></i>
+                        <i class="fab fa-html5" id="html5"></i>
                     </div>
                     <p>Lorem ipsum</p>
                 </div>
                 <div class="skill s-uno">
                     <h2>CSS3</h2>
                     <div class="icon-habilidades">
-                        <i class="fab fa-css3-alt"></i>
+                        <i class="fab fa-css3-alt" id="css3"></i>
                     </div>
                     <p>Lorem ipsum</p>
                 </div>
                 <div class="skill s-uno">
                     <h2>JavaScript</h2>
                     <div class="icon-habilidades">
-                        <i class="fab fa-js-square"></i>
+                        <i class="fab fa-js-square" id="js"></i>
                     </div>
                     <p>Lorem ipsum</p>
                 </div>
                 <div class="skill s-dos">
                     <h2>C#</h2>
                     <div class="icon-habilidades">
-                        <i class="fas fa-code"></i>
+                        <i class="fas fa-code" id="csharp"></i>
                     </div>
                     <p>Lorem ipsum</p>
                 </div>
                 <div class="skill s-dos">
                     <h2>Git</h2>
                     <div class="icon-habilidades">
-                        <i class="fab fa-git-alt"></i>
+                        <i class="fab fa-git-alt" id="git"></i>
                     </div>
                     <p>Lorem ipsum</p>
                 </div>
                 <div class="skill s-dos">
                     <h2>SQL Server</h2>
                     <div class="icon-habilidades">
-                        <i class="fas fa-database"></i>
+                        <i class="fas fa-database" id="sql"></i>
                     </div>
                     <p>Lorem ipsum</p>
                 </div>
