--- a/index.html
+++ b/index.html
@@ -101,31 +101,26 @@
             <h1>My Experience</h1>
             <div class="contenedor-experience">
                 <div class="experience">
-                    <h2>Administrativo Contable Senior</h2>
-                    <h3>Estudio Moreno y Asociados</h3>
-                    <p>10-2017 - Actualidad</p>
+                    <h2>Web Developer Junior</h2>
+                    <h3>Freelance</h3>
+                    <p>03-2019 - Today</p>
                     <div class="lista-tareas">
-                        <li></li>
+                        <li>Estudio Moreno y Asociados <a href="http://morenoyasociados.com.ar/" target="_blank">Website</a></li>
+                        <li>Freelance Develooper <a href=https://freelanceweb.netlify.com/ target="_blank">Website</a></li>
+                        <li>FrontEnd Store <a href=https://frontstore.netlify.com target="_blank">Website</a></li>
                     </div>
-
                 </div>
                 <div class="experience">
                     <h2>Administrativo Contable Senior</h2>
                     <h3>Estudio Moreno y Asociados</h3>
-                    <p>10-2017 - Actualidad</p>
+                    <p>02-2015 - Today</p>
                     <div class="lista-tareas">
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </div>
-
-                </div>
-                <div class="experience">
-                    <h2>Administrativo Contable Senior</h2>
-                    <h3>Estudio Moreno y Asociados</h3>
-                    <p>10-2017 - Actualidad</p>
-                    <div class="lista-tareas">
-                        <li></li>
+                        <li>Accountability Indexs <a href="https://github.com/pinomartin/indicesEECCapp" target="_blank">App</a></li>
+                        <li>Settle Taxes</li>
+                        <li>Excel Sheets Development</li>
+                        <li>Accountancy</li>
+                        <li>Payroll Services</li>
+                        <li>Administrative Taks</li>
                     </div>
 
                 </div>
