--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
                     <p>03-2019 - Today</p>
                     <div class="lista-tareas">
                         <li>Estudio Moreno y Asociados <a href="http://morenoyasociados.com.ar/" target="_blank">Website</a></li>
-                        <li>Freelance Develooper <a href=https://freelanceweb.netlify.com/ target="_blank">Website</a></li>
+                        <li>Freelance Developer <a href=https://freelanceweb.netlify.com/ target="_blank">Website</a></li>
                         <li>FrontEnd Store <a href=https://frontstore.netlify.com target="_blank">Website</a></li>
                     </div>
                 </div>
                 <div class="experience">
-                    <h2>Administrativo Contable Senior</h2>
+                    <h2>Administrative Accounting Senior</h2>
                     <h3>Estudio Moreno y Asociados</h3>
                     <p>02-2015 - Today</p>
                     <div class="lista-tareas">
