--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" type="image/ico" href="img/icon_web.ico"/>
 </head>
 
 <body>
@@ -109,7 +108,6 @@
                         <li>Estudio Moreno y Asociados <a href="http://morenoyasociados.com.ar/" target="_blank">Website</a></li>
                         <li>Freelance Developer <a href=https://freelanceweb.netlify.com/ target="_blank">Website</a></li>
                         <li>FrontEnd Store <a href=https://frontstore.netlify.com target="_blank">Website</a></li>
-                        <li>My Piano <a href=https://pianoweb.netlify.com target="_blank">Website</a></li>
                     </div>
                 </div>
                 <div class="experience">
@@ -133,10 +131,13 @@
     <footer class="footer">
         <h3>Follow me</h3>
         <div class="iconos" id="iconos-contacto">
-            <a href="https://www.linkedin.com/in/martinpino91/" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/pinomartin" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://drive.google.com/open?id=1QwJdUblZdtZjmvyTN-MsAmazQTlS5cug" target="_blank"><i class="far fa-file-alt"></i></a>
-            <a href="https://api.whatsapp.com/send?phone=543517704193&text=Hola%20Mart%C3%ADn%20!%20Me%20interesa%20saber%20m%C3%A1s%20de%20ti" target="_blank"><i class="fab fa-whatsapp"></i></a>
+            <a id="linkedin" href="https://www.linkedin.com/in/martinpino91/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a id="github" href="https://github.com/pinomartin" target="_blank"><i class="fab fa-github"></i></a>
+            <a id="cv" href="https://drive.google.com/open?id=1QwJdUblZdtZjmvyTN-MsAmazQTlS5cug" target="_blank"><i class="far fa-file-alt"></i></a>
+            <a id="whatsapp" href="https://api.whatsapp.com/send?phone=543517704193&text=Hola%20Mart%C3%ADn%20!%20Me%20interesa%20saber%20m%C3%A1s%20de%20ti" target="_blank"><i class="fab fa-whatsapp"></i></a>
+        </div>
+        <div class="espacio">
+            
         </div>
     </footer>
     <script src="/js/script.js"></script>
