--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav>
-            <a href="#" id="icono" class="icono">Menu</a>
+            <a href="#" id="icono" class="icono">MENU</a>
             <!--Opciones Menu-->
             <div class="enlaces uno" id="enlaces">
                 <a href="#">Inicio</a>
@@ -28,7 +28,7 @@
         <div class="contenedor">
             <div class="textos">
                 <h1>Martin Pino</h1>
-                <h2>Freelance Developer</h2>
+                <h2>Jr. FullStack Developer</h2>
                 <div class="boton">
                     <a href="#iconos-contacto">Contact Me</a>
                 </div>
