--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type="image/ico" href="img/icon_web.ico"/>
 </head>
 
 <body>
@@ -30,7 +31,7 @@
                 <h1>Martin Pino</h1>
                 <h2>Jr. FullStack Developer</h2>
                 <div class="boton">
-                    <a href="#iconos-contacto">Contact Me</a>
+                    <a href="#iconos-contacto"><span>Contact Me</span></a>
                 </div>
             </div>
             <img src="img/vec-bet-min.png" alt="">
@@ -58,21 +59,21 @@
                     <div class="icon-habilidades">
                         <i class="fab fa-css3-alt" id="css3"></i>
                     </div>
-                    <p>Lorem ipsum</p>
+                    <p>CSS Grid, FlexBox, Responsive Web Design</p>
                 </div>
                 <div class="skill s-uno">
                     <h2>JavaScript</h2>
                     <div class="icon-habilidades">
                         <i class="fab fa-js-square" id="js"></i>
                     </div>
-                    <p>Lorem ipsum</p>
+                    <p>Basic to Advanced Knowledge</p>
                 </div>
                 <div class="skill s-dos">
                     <h2>C#</h2>
                     <div class="icon-habilidades">
                         <i class="fas fa-code" id="csharp"></i>
                     </div>
-                    <p>Lorem ipsum</p>
+                    <p>WinForms, CRUD/ABM, Desktop Apps</p>
                 </div>
                 <div class="skill s-dos">
                     <h2>Git</h2>
@@ -108,6 +109,7 @@
                         <li>Estudio Moreno y Asociados <a href="http://morenoyasociados.com.ar/" target="_blank">Website</a></li>
                         <li>Freelance Developer <a href=https://freelanceweb.netlify.com/ target="_blank">Website</a></li>
                         <li>FrontEnd Store <a href=https://frontstore.netlify.com target="_blank">Website</a></li>
+                        <li>My Piano Web <a href=https://pianoweb.netlify.com target="_blank">Website</a></li>
                     </div>
                 </div>
                 <div class="experience">
