--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
             <div class="textos">
                 <h1>Martin Pino</h1>
                 <h2>Jr. FullStack Developer</h2>
-                <div class="boton">
-                    <a href="#iconos-contacto"><span>Contact Me</span></a>
-                </div>
+                <button class="boton"><a href="#iconos-contacto">Contact Me</a></button>
             </div>
             <img src="img/vec-bet-min.png" alt="">
         </div>
@@ -67,13 +65,14 @@
                         <i class="fab fa-js-square" id="js"></i>
                     </div>
                     <p>Basic to Advanced Knowledge</p>
+                    <p>ES6 features</p>
                 </div>
                 <div class="skill s-dos">
                     <h2>C#</h2>
                     <div class="icon-habilidades">
                         <i class="fas fa-code" id="csharp"></i>
                     </div>
-                    <p>WinForms, CRUD/ABM, Desktop Apps</p>
+                    <p>WinForms, CRUD/ABM, Desktop Apps, ADO.NET</p>
                 </div>
                 <div class="skill s-dos">
                     <h2>Git</h2>
