--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <div class="iconos" id="iconos-contacto">
             <a id="linkedin" href="https://www.linkedin.com/in/martinpino91/" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a id="github" href="https://github.com/pinomartin" target="_blank"><i class="fab fa-github"></i></a>
-            <a id="cv" href="https://drive.google.com/open?id=1QwJdUblZdtZjmvyTN-MsAmazQTlS5cug" target="_blank"><i class="far fa-file-alt"></i></a>
+            <a id="cv" href="https://drive.google.com/file/d/1zjAWQwpfijKoT9tbVXRzxxKMCCJ6PzU7/view?usp=sharing" target="_blank"><i class="far fa-file-alt"></i></a>
             <a id="whatsapp" href="https://api.whatsapp.com/send?phone=543517704193&text=Hola%20Mart%C3%ADn%20!%20Me%20interesa%20saber%20m%C3%A1s%20de%20ti" target="_blank"><i class="fab fa-whatsapp"></i></a>
         </div>
         <div class="espacio">
