--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="textos">
                 <h1>Martin Pino</h1>
                 <h2>Jr. FullStack Developer</h2>
-                <button class="boton"><a href="#iconos-contacto">Contact Me</a></button>
+                <a href="#iconos-contacto"><button class="boton">Contact Me</button></a>
             </div>
             <img src="img/vec-bet-min.png" alt="">
         </div>
@@ -109,6 +109,7 @@
                         <li>Freelance Developer <a href=https://freelanceweb.netlify.com/ target="_blank">Website</a></li>
                         <li>FrontEnd Store <a href=https://frontstore.netlify.com target="_blank">Website</a></li>
                         <li>My Piano Web <a href=https://pianoweb.netlify.com target="_blank">Website</a></li>
+                        <li>Drums Keyboard Web <a href=https://keydrumsweb.netlify.com/ target="_blank">Website</a></li>
                     </div>
                 </div>
                 <div class="experience">
