Contact button fix and + of JQuery to .js file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="/style/estilos.css">
     <link rel="stylesheet" href="/style/all.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
@@ -29,9 +30,7 @@
             <div class="textos">
                 <h1>Martin Pino</h1>
                 <h2>Jr. FullStack Developer</h2>
-                <div class="boton">
-                    <a href="#iconos-contacto">Contact Me</a>
-                </div>
+                <a class= "boton" href="#iconos-contacto" id="boton-contacto">Contact Me</a>
             </div>
             <img src="img/vec-bet-min.png" alt="">
         </div>
