--- a/index.html
+++ b/index.html
@@ -51,43 +51,65 @@
                     <div class="icon-habilidades">
                         <i class="fab fa-html5" id="html5"></i>
                     </div>
-                    <p>Lorem ipsum</p>
+                    <ul>
+                        <li>Modern Web Pages</li>
+                        <li>Design Structure</li>
+                        <li>Semantic HTML</li>
+                        <li>Elements & Tags</li>
+                    </ul>
                 </div>
                 <div class="skill s-uno">
                     <h2>CSS3</h2>
                     <div class="icon-habilidades">
                         <i class="fab fa-css3-alt" id="css3"></i>
                     </div>
-                    <p>CSS Grid, FlexBox, Responsive Web Design</p>
+                    <ul>
+                        <li>CSS Grid</li>
+                        <li>FlexBox</li>
+                        <li>Responsive Web Design</li>
+                    </ul>
                 </div>
                 <div class="skill s-uno">
                     <h2>JavaScript</h2>
                     <div class="icon-habilidades">
                         <i class="fab fa-js-square" id="js"></i>
                     </div>
-                    <p>Basic to Advanced Knowledge</p>
-                    <p>ES6 features</p>
+                    <ul>
+                        <li>Basic to Advanced Knowledge</li>
+                        <li>ES6 features</li>
+                        <li></li>
+                    </ul>
                 </div>
                 <div class="skill s-dos">
                     <h2>C#</h2>
                     <div class="icon-habilidades">
                         <i class="fas fa-code" id="csharp"></i>
                     </div>
-                    <p>WinForms, CRUD/ABM, Desktop Apps, ADO.NET</p>
+                    <ul>
+                        <li>WinForms Apps</li>
+                        <li>CRUD/ABM</li>
+                        <li>ADO.NET</li>
+                    </ul>
                 </div>
                 <div class="skill s-dos">
                     <h2>Git</h2>
                     <div class="icon-habilidades">
                         <i class="fab fa-git-alt" id="git"></i>
                     </div>
-                    <p>Lorem ipsum</p>
+                    <ul>
+                        <li>Control Version Features</li>
+                    </ul>
                 </div>
                 <div class="skill s-dos">
                     <h2>SQL Server</h2>
                     <div class="icon-habilidades">
                         <i class="fas fa-database" id="sql"></i>
                     </div>
-                    <p>Lorem ipsum</p>
+                    <ul>
+                        <li>DB Normalization </li>
+                        <li>DDL & DML</li>
+                        <li>DB Management</li>
+                    </ul>
                 </div>
             </div>
         </main>
@@ -106,11 +128,13 @@
                     <h3>Freelance</h3>
                     <p>03-2019 - Today</p>
                     <div class="lista-tareas">
+                        <ul>
                         <li>Estudio Moreno y Asociados <a href="http://morenoyasociados.com.ar/" target="_blank">Website</a></li>
                         <li>Freelance Developer <a href=https://freelanceweb.netlify.com/ target="_blank">Website</a></li>
                         <li>FrontEnd Store <a href=https://frontstore.netlify.com target="_blank">Website</a></li>
                         <li>My Piano Web <a href=https://pianoweb.netlify.com target="_blank">Website</a></li>
                         <li>Drums Keyboard Web <a href=https://keydrumsweb.netlify.com/ target="_blank">Website</a></li>
+                        </ul>
                     </div>
                 </div>
                 <div class="experience">
@@ -118,12 +142,14 @@
                     <h3>Estudio Moreno y Asociados</h3>
                     <p>02-2015 - Today</p>
                     <div class="lista-tareas">
-                        <li>Accountability Indexs <a href="https://github.com/pinomartin/indicesEECCapp" target="_blank">App</a></li>
-                        <li>Settle Taxes</li>
-                        <li>Excel Sheets Development</li>
-                        <li>Accountancy</li>
-                        <li>Payroll Services</li>
-                        <li>Administrative Taks</li>
+                        <ul>
+                            <li>Accountability Indexs <a href="https://github.com/pinomartin/indicesEECCapp" target="_blank">App</a></li>
+                            <li>Excel Sheets Development</li>
+                            <li>Settle Taxes</li>
+                            <li>Accountancy</li>
+                            <li>Payroll Services</li>
+                            <li>Administrative Taks</li>
+                        </ul>
                     </div>
 
                 </div>
