--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
                     <div class="lista-tareas">
                         <ul>
                         <li>Estudio Moreno y Asociados <a href="http://morenoyasociados.com.ar/" target="_blank">Website</a></li>
+                        <li>Portfolio Fotografia Rocio Juarez <a href="https://rociojua.netlify.com/" target="_blank">Website</a></li>
                         <li>Freelance Developer <a href=https://freelanceweb.netlify.com/ target="_blank">Website</a></li>
                         <li>FrontEnd Store <a href=https://frontstore.netlify.com target="_blank">Website</a></li>
                         <li>My Piano Web <a href=https://pianoweb.netlify.com target="_blank">Website</a></li>
