--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="enlaces uno" id="enlaces">
                 <a id="skill" href="#divskills">Skills</a>
                 <a id="xp" href="#divexp">Experience</a>
-                <a id="contacto" href="#iconos">Contacto</a>
+                <a id="contacto" href="#iconos-contacto">Contact</a>
             </div>
 
         </nav>
@@ -38,7 +38,7 @@
         </div>
 
         <div class="home">
-            <a id="btn-home" class="boton btn-home" href="#divskills-h1">Ir</a>
+            <a id="btn-home" class="boton btn-home" href="#divskills-h1">About Me!</a>
         </div>
         </header>
 
@@ -102,8 +102,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            </main>
+        </div>
+        </main>
         </div>
         <!-- <div class="hero-inter">
             <div class="wave">
@@ -123,21 +123,33 @@
                         <h3>Freelance</h3>
                         <p>03-2019 - Today</p>
                         <div class="lista-tareas">
-                            <ul>
-                                <li>Estudio Moreno y Asociados <a href="http://morenoyasociados.com.ar/"
-                                        target="_blank">Website</a></li>
-                                <li>Portfolio Fotografia Rocio Juarez <a href="https://rociojua.netlify.com/"
-                                        target="_blank">Website</a></li>
-                                <li>Freelance Developer <a href=https://freelanceweb.netlify.com/
-                                        target="_blank">Website</a></li>
-                                <li>FrontEnd Store <a href=https://frontstore.netlify.com target="_blank">Website</a>
+                            <ul class="web">
+                                <li><a href="http://morenoyasociados.com.ar/" target="_blank"><img
+                                            src="img/estudiowebm.png" alt=""></a>Estudio Moreno y Asociados </li>
+                                <li><a href="https://rociojua.netlify.com/" target="_blank"><img src="img/rojuawebm.png"
+                                            alt=""></a>Portfolio Fotografia Rocio Juarez</li>
+
+                                <li><a href="https://buscacinereact.netlify.app" target="_blank"><img
+                                            src="img/buscareactwebm.png" alt=""></a>BuscaCine React App
                                 </li>
-                                <li>My Piano Web <a href=https://pianoweb.netlify.com target="_blank">Website</a></li>
-                                <li>Drums Keyboard Web <a href=https://keydrumsweb.netlify.com/
-                                        target="_blank">Website</a></li>
+                            </ul>
+                            <ul class="web">
+                                <li><a href="https://namesgen.netlify.app/" target="_blank"><img
+                                            src="img/nameswebm.png" alt=""></a>Names Generator</li>
+                                <li><a href="https://frontstore.netlify.app" target="_blank"><img
+                                            src="img/frontstoreweb.png" alt=""></a>
+                                    FrontEnd Store</li>
+                                <li><a href="https://keydrumsweb.netlify.app/" target="_blank"><img
+                                            src="img/drumswebm.png" alt=""></a>Drums Keyboard Web</li>
+                            </ul>
+                            <ul class="web">
+                                <li><a href="https://vidpiaweb.netlify.app/" target="_blank"><img
+                                            src="img/vidpiawebm.png" alt=""></a>Vidpia Vidrios Piazze</li>
                             </ul>
                         </div>
                     </div>
+                </div>
+                <div class="contenedor-experience">
                     <div class="experience">
                         <h2>Administrative Accounting Senior</h2>
                         <h3>Estudio Moreno y Asociados</h3>
